correction des contrastes

--- a/style.css
+++ b/style.css
@@ -767,10 +767,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #90370E;
+    background-color: #F3976C;
 }
 
 .tc-white {
+    color: black;
+    font-weight: bold;
+}
+
+.tc-black {
     color: white;
     font-weight: bold;
 }
